# anyf0

./: .condarc  .gitignore  README.md  build-environment.yml  conda-lock.yml  environment.yml  install_requirements.sh  install_requirements_win64.sh  pyproject.toml  uv.toml  virtual-packages.yml
.github/workflows/: relock.yml
anyf0/: __init__.py  __main__.py  f0_extractor.py  fcpe.py  mod_crepe.py  rmvpe.py  swift.py  vshp.py  wav2mel.py
