[project]
authors = [{ name = "SoulMelody", email = "yjxrtzyx@gmail.com" }]
version = "0.1.1"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
name = "anyf0"
description = "Use VocalShifter to visualize f0 curve instead of matplotlib"
keywords = []
classifiers = []
dependencies = [
    "construct>=2.10.70",
    "numba>=0.63.1",
    "praat-parselmouth>=0.4.7",
    "pretty-midi>=0.2.11",
    "pyworld>=0.3.5",
    "tgt>=1.5",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.23.2",
    "swift-f0>=0.1.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcrepe>=0.0.24",
    "torchfcpe>=0.0.4",
]
cu130 = [
    "onnxruntime-gpu>=1.23.2",
    "swift-f0>=0.1.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcrepe>=0.0.24",
    "torchfcpe>=0.0.4",
]

[dependency-groups]
dev = [
    "jaxtyping>=0.3.7",
    "matplotlib>=3.10.8",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu130" },
  ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu130", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.scripts]
anyf0 = "anyf0.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
